--- a/index.html
+++ b/index.html
@@ -259,12 +259,15 @@
         import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         
         // PASTE YOUR FIREBASE CONFIG HERE
-        const firebaseConfig = {
-            // apiKey: "YOUR_API_KEY",
-            // authDomain: "YOUR_AUTH_DOMAIN",
-            // projectId: "YOUR_PROJECT_ID",
-            // ...other properties
-        };
+       const firebaseConfig = {
+  apiKey: "AIzaSyCIbHtS4kvuXrllfKrftVXBkcOjRRwqvU4",
+  authDomain: "volt-vision.firebaseapp.com",
+  projectId: "volt-vision",
+  storageBucket: "volt-vision.firebasestorage.app",
+  messagingSenderId: "614497986695",
+  appId: "1:614497986695:web:c64faf50459485fb50b022",
+  measurementId: "G-HBXS79FJBT"
+};
         const LOCATION_NAME = "Nashik, Maharashtra, India";
         
         const loadingOverlay = document.getElementById('loading-overlay');
@@ -425,3 +428,4 @@
 </body>
 
 </html>
+
